--- a/legacy-rp-cad-frontend/app/index.html
+++ b/legacy-rp-cad-frontend/app/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LegacyRpCad</title>
+    <title>Legacy RP - CAD</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
+
+    <link integrity="" rel="icon" type="image/png" href="{{rootURL}}favicon.png">
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/legacy-rp-cad.css">
