--- a/legacy-rp-cad-frontend/app/index.html
+++ b/legacy-rp-cad-frontend/app/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Legacy RP - CAD</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{content-for "head"}}
+        <!-- Title -->
+        <title>Legacy RP - CAD</title>
 
-    <link integrity="" rel="icon" type="image/png" href="{{rootURL}}favicon.png">
+        {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/legacy-rp-cad.css">
+        <!-- Favicon -->
+        <link integrity="" rel="icon" type="image/png" href="{{rootURL}}favicon.png">
 
-    {{content-for "head-footer"}}
-  </head>
-  <body>
-    {{content-for "body"}}
+        <!-- Styling -->
+        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/legacy-rp-cad.css">
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/legacy-rp-cad.js"></script>
+        {{content-for "head-footer"}}
+    </head>
+    <body>
+        {{content-for "body"}}
 
-    {{content-for "body-footer"}}
-  </body>
+        <!-- Font awesome -->
+        <script src="https://kit.fontawesome.com/279ca53c83.js" crossorigin="anonymous"></script>
+
+        <!-- Scripts -->
+        <script src="{{rootURL}}assets/vendor.js"></script>
+        <script src="{{rootURL}}assets/legacy-rp-cad.js"></script>
+
+        {{content-for "body-footer"}}
+    </body>
 </html>
