--- a/legacy-rp-cad-frontend/app/index.html
+++ b/legacy-rp-cad-frontend/app/index.html
@@ -13,11 +13,11 @@
         {{content-for "head"}}
 
         <!-- Favicon -->
-        <link integrity="" rel="icon" type="image/png" href="{{rootURL}}favicon.png">
+        <link integrity="" rel="icon" type="image/png" href="favicon.png">
 
         <!-- Styling -->
-        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-        <link integrity="" rel="stylesheet" href="{{rootURL}}assets/legacy-rp-cad.css">
+        <link integrity="" rel="stylesheet" href="assets/vendor.css">
+        <link integrity="" rel="stylesheet" href="assets/legacy-rp-cad.css">
 
         {{content-for "head-footer"}}
     </head>
@@ -28,8 +28,8 @@
         <script src="https://kit.fontawesome.com/279ca53c83.js" crossorigin="anonymous"></script>
 
         <!-- Scripts -->
-        <script src="{{rootURL}}assets/vendor.js"></script>
-        <script src="{{rootURL}}assets/legacy-rp-cad.js"></script>
+        <script src="assets/vendor.js"></script>
+        <script src="assets/legacy-rp-cad.js"></script>
 
         {{content-for "body-footer"}}
     </body>
